Fixed bug #45178 (memory corruption on assignment result of "new" by reference)